Add ability to simultaneously play metronome and rhythm

--- a/src/assets/i18n/en/generator.json
+++ b/src/assets/i18n/en/generator.json
@@ -18,6 +18,7 @@
   "Sound":"Sound",
   "Rhythm":"Rhythm",
   "Metronome":"Metronome",
+  "Together":"Both",
   "Sound_Error":"Sorry, we can not play the sound in your browser. Try a different browser or check if you have Flash.",
   "Steps":"Steps",
   "kick_instead_hold": "kick instead hold",
