--- a/src/assets/i18n/ru/generator.json
+++ b/src/assets/i18n/ru/generator.json
@@ -18,6 +18,7 @@
   "Sound":"Звук",
   "Rhythm":"Ритм",
   "Metronome":"Метроном",
+  "Together":"Вместе",
   "Sound_Error":"Извините, мы не можем проиграть звук в вашем браузере. Попробуйте другой браузер или проверьте, установлен ли у вас Flash.",
   "Steps":"Шаги",
   "kick_instead_hold": "kick вместо hold",
