--- a/src/assets/i18n/ru/generator.json
+++ b/src/assets/i18n/ru/generator.json
@@ -19,7 +19,8 @@
   "Rhythm":"Ритм",
   "Metronome":"Метроном",
   "Together":"Вместе",
-  "Sound_Error":"Извините, мы не можем проиграть звук в вашем браузере. Попробуйте другой браузер или проверьте, установлен ли у вас Flash.",
+  "Play_accent":"делать акцент на каждые:",
+  "Sound_Error":"Извините, мы не можем проиграть звук в вашем браузере.",
   "Steps":"Шаги",
   "kick_instead_hold": "kick вместо hold",
   "Manual_mode": "ручной режим"
