Add new feature: add more counts, split by lines

--- a/src/assets/i18n/en/generator.json
+++ b/src/assets/i18n/en/generator.json
@@ -12,16 +12,17 @@
   "Save_rock_step": "keep rock step",
   "Show_step_names": "show step names",
   "Show_bits": "show counts",
+  "Show_row_index": "show line index",
   "Group_two_steps": "group two steps",
   "Show_triple": "show triple step",
-  "Tempo":"Tempo",
-  "Sound":"Sound",
-  "Rhythm":"Rhythm",
-  "Metronome":"Metronome",
-  "Together":"Both",
-  "Play_accent":"play accent on each:",
-  "Sound_Error":"Sorry, we can not play the sound in your browser. Try a different browser or check if you have Flash.",
-  "Steps":"Steps",
+  "Tempo": "Tempo",
+  "Sound": "Sound",
+  "Rhythm": "Rhythm",
+  "Metronome": "Metronome",
+  "Together": "Both",
+  "Play_accent": "play accent on each:",
+  "Sound_Error": "Sorry, we can not play the sound in your browser. Try a different browser or check if you have Flash.",
+  "Steps": "Steps",
   "kick_instead_hold": "kick instead hold",
   "Manual_mode": "manual mode"
 }
