--- a/src/assets/i18n/ru/generator.json
+++ b/src/assets/i18n/ru/generator.json
@@ -12,16 +12,17 @@
   "Save_rock_step": "сохранить рок-степ",
   "Show_step_names": "подписывать шаги",
   "Show_bits": "подписывать биты",
+  "Show_row_index": "показывать номер строки",
   "Group_two_steps": "группировать шаги по два",
   "Show_triple": "выделять трипл степ",
-  "Tempo":"Темп",
-  "Sound":"Звук",
-  "Rhythm":"Ритм",
-  "Metronome":"Метроном",
-  "Together":"Вместе",
-  "Play_accent":"делать акцент на каждые:",
-  "Sound_Error":"Извините, мы не можем проиграть звук в вашем браузере.",
-  "Steps":"Шаги",
+  "Tempo": "Темп",
+  "Sound": "Звук",
+  "Rhythm": "Ритм",
+  "Metronome": "Метроном",
+  "Together": "Вместе",
+  "Play_accent": "делать акцент на каждые:",
+  "Sound_Error": "Извините, мы не можем проиграть звук в вашем браузере.",
+  "Steps": "Шаги",
   "kick_instead_hold": "kick вместо hold",
   "Manual_mode": "ручной режим"
 }
