Add new feature: syncopation

--- a/src/assets/i18n/en/generator.json
+++ b/src/assets/i18n/en/generator.json
@@ -15,6 +15,7 @@
   "Show_row_index": "show line index",
   "Group_two_steps": "group two steps",
   "Show_triple": "show triple step",
+  "Syncopation_max": "Syncopation (max)",
   "Tempo": "Tempo",
   "Sound": "Sound",
   "Rhythm": "Rhythm",
