--- a/src/assets/i18n/ru/generator.json
+++ b/src/assets/i18n/ru/generator.json
@@ -15,6 +15,7 @@
   "Show_row_index": "показывать номер строки",
   "Group_two_steps": "группировать шаги по два",
   "Show_triple": "выделять трипл степ",
+  "Syncopation_max": "Макс. кол-во синкоп",
   "Tempo": "Темп",
   "Sound": "Звук",
   "Rhythm": "Ритм",
