--- a/src/assets/i18n/ru/generator.json
+++ b/src/assets/i18n/ru/generator.json
@@ -25,5 +25,8 @@
   "Sound_Error": "Извините, мы не можем проиграть звук в вашем браузере.",
   "Steps": "Шаги",
   "kick_instead_hold": "kick вместо hold",
-  "Manual_mode": "ручной режим"
+  "Manual_mode": "ручной режим",
+  "copied": "Ссылка скопирована!",
+  "press_CTRL+C": "Нажмите CTRL+C, чтобы скопировать ссылку",
+  "Share_rhythm": "Поделиться ритмом"
 }
