Add meta description for views

--- a/src/assets/i18n/en/about.json
+++ b/src/assets/i18n/en/about.json
@@ -1,5 +1,6 @@
 {
   "About": "About",
+  "About_meta_description": "The footwork generator allows dancers to improve their dancing skills using rhythmic variation of steps. Contact form",
   "About_1": "The idea of generator was based on the rythm <a href=\"http://msds.livejournal.com/1537470.html\">course</a> by <a href=\"https://www.facebook.com/marina.ananova\"><i class=\"glyphicon glyphicon-user\"></i> Marina Ananova</a>, a lindy hop teacher.",
   "About_2": "The generator is written to help lindy hop dancers (and possibly other styles dancers) to improve their dancing skills by varying the basic steps. Also we offer several exercises and some theory",
   "About_3": "If you have suggestions, comments, write on ",
