--- a/src/assets/i18n/en/exercises.json
+++ b/src/assets/i18n/en/exercises.json
@@ -1,5 +1,6 @@
 {
   "Exercises": "Exercises",
+  "Exercises_meta_description": "These exercises will help you developing the skill of rhythmic varying your steps",
   "Exercise": "Exercise",
   "Collapse_all": "Collapse all",
   "Expand_all": "Expand all",
