--- a/src/assets/i18n/ru/about.json
+++ b/src/assets/i18n/ru/about.json
@@ -1,5 +1,6 @@
 {
   "About": "О проекте",
+  "About_meta_description": "Генератор позволяет танцорам улучшить свои танцевальные навыки за счет ритмической вариации шагов. Форма для связи",
   "About_1": "Идея генератора возникла на основе <a href=\"http://msds.livejournal.com/1537470.html\">курса</a> по ритмам  <a href=\"https://www.facebook.com/marina.ananova\"><i class=\"glyphicon glyphicon-user\"></i> Марины Анановой</a>, преподавателя линди хопа.",
   "About_2": "Генератор написан с целью помочь танцорам линди хопа (возможно, и танцорам других направлений) улучшить свои танцевальные навыки за счет вариации шагов в бейсике. Кроме непосредственно самого генератора предложены отдельные упражнения и сопровождающая их теория.",
   "About_3": "Если у вас есть предложения, замечания, напишите на ",
