--- a/src/assets/i18n/ru/exercises.json
+++ b/src/assets/i18n/ru/exercises.json
@@ -1,5 +1,6 @@
 {
   "Exercises": "Упражнения",
+  "Exercises_meta_description": "Упражнения, ориентируясь на которые, вы сможете развить навыки ритмической вариации шагов",
   "Exercise": "Упражнение",
   "Collapse_all": "Свернуть все",
   "Expand_all": "Развернуть все",
