Add text to exercises view

--- a/src/assets/i18n/ru/exercises.json
+++ b/src/assets/i18n/ru/exercises.json
@@ -5,6 +5,8 @@
   "Collapse_all": "Свернуть все",
   "Expand_all": "Развернуть все",
   "Exercises_desc": "В разделе представлены упражнения, ориентируясь на которые, вы сможете развить навыки варьирования шагов в бейсике.",
+  "Exercises_desc_2": "Вы можете запустить пример, нажав",
+  "Exercises_desc_3": "Присылайте ваши любимые ритмы!",
   "Exercise_1": "Инвертирование триплстепа",
   "Exercise_1_1": "Было",
   "Exercise_1_2": "а стало",
