--- a/src/assets/i18n/en/exercises.json
+++ b/src/assets/i18n/en/exercises.json
@@ -5,6 +5,8 @@
   "Collapse_all": "Collapse all",
   "Expand_all": "Expand all",
   "Exercises_desc": "These exercises will help you developing the skill of varying your steps in basic.",
+  "Exercises_desc_2": "You can run the example by clicking",
+  "Exercises_desc_3": "Send your favorite rhythms!",
   "Exercise_1": "Inverting of triple step",
   "Exercise_1_1": "There was",
   "Exercise_1_2": "and became",
